# vehicle_simulator

./: .config  .env  .env.example  .gitignore  .hintrc  .markdownlint.json  API_ROUTES_CREATED.md  ARCHITECTURE_DEFINITIVE.md  BOARDING_RULES.md  BUG_FIXES_SPAWN_DATA_QUALITY.md  BUG_FIX_DUPLICATE_ID.md  CLEANUP_REPORT_OCT14.md  CLEANUP_SESSION_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_REVIEW_REPORT.md  COMMUTER_CONSOLE_GUIDE.txt  COMMUTER_SERVICE_CODE_STANDARDS_EVALUATION.md  COMMUTER_SERVICE_STATUS.md  COMMUTER_SPAWNING_SUMMARY.md  COMPLETE_ARCHITECTURE_ANALYSIS.md  COMPLETE_IMPLEMENTATION_ROADMAP.md  COMPLETE_SPAWNING_ARCHITECTURE_PART1.md  COMPLETE_SPAWNING_ARCHITECTURE_PART2.md  CONDUCTOR_ACCESS_MECHANISM.md  CONDUCTOR_DRIVER_INTEGRATION_TEST_RESULTS.md  CONDUCTOR_PASSENGER_INTEGRATION_GUIDE.md  CONDUCTOR_QUERY_LOGIC_CONFIRMED.md  CONDUCTOR_REFACTOR_PLAN.md  CONDUCTOR_SPATIAL_AWARENESS_ANALYSIS.md  CONDUCTOR_VISION_ARCHITECTURE.md  CONDUCTOR_VISION_GUIDE.md  CONTEXT.md  CONTEXT.md.backup  DATA_SOURCE_STRATEGY.md  DEFAULT_STRATEGY_CHANGE.md  DEPOT_INTEGRATION_SUMMARY.md  DEPOT_SCHEMA_FIX_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  DRIVER_CLASS_CLARIFICATION.md  DRIVER_ENGINE_START_TRIGGERS.md  (+525 more)
.github/: copilot-instructions.md
alembic/: env.py
api/: README-ROCK-S0.md  cli.py  database.py  main.bat  main.py  main_simple.py  requirements.txt  run  run.py  server.py  setup  start  start.ps1  start.py
arknet-transit-launcher/: README.md  config.example.ini  package.json  requirements.txt
arknet_control_center/: package-lock.json  package.json
clients/: README.md
(+1689 files in other folders)
